<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- TODO: Add necessary string values -->
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="find_representatives">Find My Representatives</string>


    <string name="follow">Follow</string>
    <string name="unfollow">UnFollow</string>
    <string name="locations">Voting Locations</string>
    <string name="election_information">Election Information</string>
    <string name="ballot_informations">Ballot Informations</string>
    <string name="state_correspondence_address">State Correspondence Address</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="find_my_representatives">find my representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="state">State</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>


</resources>
